--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,6 +14,7 @@ jobs:
         uses: rlalik/setup-cpp-compiler@v1.2
       - name: Work C Test.
         run: make -help
+      - run: make all
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
