--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Setup C/C++ env
-        uses: aminya/setup-cpp@v0.23.0
+        uses: rlalik/setup-cpp-compiler@v1.2
       - name: Work C Test.
         run: make -help
       - run: make all
