--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,9 +12,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup C/C++ env
         uses: rlalik/setup-cpp-compiler@v1.2
+      - name: Setup python env
+        uses: actions/setup-python@v2.3.3
       - name: Work C Test.
         run: make -help
-      - run: make all
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
