--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/setup-python@v2.3.3
       - name: Work C Test.
         run: make -help
+      - run: make all
+      - run: python python_require_env.py
+      - run: cd doc&&make html&&cd ..
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
