--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,7 +15,7 @@ jobs:
         uses: rlalik/setup-cpp-compiler@v1.2
       - name: Setup python env
         uses: actions/setup-python@v2.3.3
-      - run: sudo apt-get install python3-sphinx
+      #- run: sudo apt-get install python3-sphinx
       - name: Work C Test.
         run: make -help
       - run: make all
